--- a/setup.cfg
+++ b/setup.cfg
@@ -13,4 +13,4 @@ output=build/reports/coverage.xml
 [flake8]
 max-line-length=140
 max-complexity=10
-exclude=build,.git,__pycache__,.eggs,dist
+exclude=build,.git,__pycache__,.eggs,dist,.tox,.cache
