--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = py27
-# TODO: Fix python 3 support and add these to envlist: py33,py34,py35,py36
+envlist = py27,py33,py34,py35,py36
 skip_missing_interpreters=True
 
 [testenv]
