Replace flake8 with similary configured prospector

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ setenv =
     TMP = {envtmpdir}
 passenv =
     HOME
-commands=flake8 '--format=%(path)-50s: [%(code)s] %(text)s [line:%(row)d, column:%(col)d]'
-         py.test "-m not integration_test"
+commands=prospector
+         py.test
