Prepare to generate/upload coverage as separate job in CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ tag_build=-SNAPSHOT
 [aliases]
 test=pytest
 
+[tool:pytest]
+addopts = --junitxml=build/reports/tests/junit.xml --cov=k8s --cov-report html --cov-report term --cov-report xml
+
 [coverage:html]
 directory=build/reports/coverage
 
