--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,13 @@ passenv =
     HOME
 commands=flake8 '--format=%(path)-50s: [%(code)s] %(text)s [line:%(row)d, column:%(col)d]'
          py.test "-m not integration_test"
+
+[testenv:coverage]
+usedevelop=True
+deps=-rrequirements.txt
+     codacy-coverage
+passenv =
+    HOME
+    CODACY_PROJECT_TOKEN
+commands=py.test
+         python-codacy-coverage -r ./build/reports/coverage.xml
