Move specification of codacy dependency to setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,7 @@ commands=prospector
 
 [testenv:coverage]
 usedevelop=True
-deps=-rrequirements.txt
-     codacy-coverage
+deps=.[dev,codacy]
 passenv =
     HOME
     CODACY_PROJECT_TOKEN
