Add flake8 config - bump max line length to 120

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,8 @@ directory=build/reports/coverage
 
 [coverage:xml]
 output=build/reports/coverage.xml
+
+[flake8]
+max-line-length=120
+max-complexity=10
+exclude=build,.git,__pycache__,.eggs,dist
