Omit generated code from code coverage reports

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ test=pytest
 [tool:pytest]
 addopts = --junitxml=build/reports/tests/junit.xml --cov=k8s --cov-report html --cov-report term --cov-report xml
 
+[coverage:run]
+omit=k8s/models/v1_*/
+
 [coverage:html]
 directory=build/reports/coverage
 
