Add py39 to set of tested versions
This requires updating tox, which requires a higher version of
six than was being specified.

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -40,7 +40,7 @@ blocks:
             - tox
           matrix:
             - env_var: TOXENV
-              values: ["py27", "py36", "py37"]
+              values: ["py27", "py36", "py37", "py39"]
         - name: Gather coverage data
           commands:
             - tox -e coverage
