--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist = py27,py35,py36,py37
+envlist = py27,py35,py36,py37,py39
+requires = setuptools==44.1.1
+           virtualenv==20.4.2
 skip_missing_interpreters=True
 
 [testenv]
