Use python 3.9 in CI

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -29,12 +29,12 @@ blocks:
           value: .pip_cache
       prologue:
         commands:
-          - export PATH="${HOME}/.local/bin":"${PATH}"
+          - sem-version python 3.9
           - checkout
           - mkdir "${PIP_CACHE_DIR}"
           - cache restore "setup-${SEMAPHORE_GIT_BRANCH}-$(checksum setup.py)","setup-${SEMAPHORE_GIT_BRANCH}",setup-master
           - pip install --upgrade pip
-          - pip install --user tox
+          - pip install tox
       jobs:
         - name: Tests
           commands:
