Drop Python 3.5, 3.6 and 3.7 too, but add 3.8 to tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py35,py36,py37,py39
-requires = setuptools==44.1.1
-           virtualenv==20.4.2
+envlist = py38,py39
+requires = setuptools
+           virtualenv
 skip_missing_interpreters=True
 
 [testenv]
