--- a/.semaphore/make-release.yml
+++ b/.semaphore/make-release.yml
@@ -18,7 +18,7 @@ name: Publish k8s library
 agent:
   machine:
     type: e1-standard-2
-    os_image: ubuntu1804
+    os_image: ubuntu2004
 blocks:
   - name: Publish
     task:
@@ -30,11 +30,12 @@ blocks:
           value: .pip_cache
       prologue:
         commands:
+          - sem-version python 3.9
           - export PATH="${HOME}/.local/bin":"${PATH}"
           - checkout
           - mkdir "${PIP_CACHE_DIR}"
           - cache restore "setup-${SEMAPHORE_GIT_BRANCH}-$(checksum setup.py)","setup-${SEMAPHORE_GIT_BRANCH}",setup-master
-          - pip install --user publish
+          - pip install publish
       jobs:
         - name: Publish
           commands:
