--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39,py310,py311,py312
+envlist = py39,py310,py311
 requires = setuptools
            virtualenv
 skip_missing_interpreters=True
